[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameElements/World.gd" type="Script" id=1]
[ext_resource path="res://GameElements/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tilesets/ocementtiles.tres" type="TileSet" id=3]
[ext_resource path="res://GameElements/bounceblocko.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameElements/middangerblocko.tscn" type="PackedScene" id=5]
[ext_resource path="res://Tilesets/bcementtiles.tres" type="TileSet" id=6]
[ext_resource path="res://Tutorial/world2.gd" type="Script" id=7]
[ext_resource path="res://Fonts/m5x7_32.tres" type="DynamicFont" id=8]

[node name="World" type="Node" index="0"]

script = ExtResource( 1 )

[node name="start" type="Position2D" parent="." index="0"]

position = Vector2( 333.502, -224.13 )

[node name="player" parent="." index="1" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 172.582, 191.248 )

[node name="Camera2D" type="Camera2D" parent="player" index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000
limit_top = -10000
limit_right = 10000
limit_bottom = 10000
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.17
drag_margin_top = 0.17
drag_margin_right = 0.17
drag_margin_bottom = 0.17
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Editor", "Limit" ]

[node name="world1" type="TileMap" parent="." index="2"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1048550, 0, 0, -1048535, 3, 0, -983014, 0, 0, -982999, 3, 0, -917478, 0, 0, -917463, 3, 0, -851942, 0, 0, -851927, 3, 0, -786406, 0, 0, -786391, 3, 0, -720870, 0, 0, -720855, 3, 0, -720832, 3, 0, -720829, 3, 0, -655334, 0, 0, -655324, 3, 0, -655323, 3, 0, -655322, 3, 0, -655321, 3, 0, -655320, 3, 0, -655319, 3, 0, -655318, 3, 0, -655317, 3, 0, -655316, 3, 0, -655315, 3, 0, -655314, 3, 0, -655313, 3, 0, -655312, 3, 0, -655311, 3, 0, -655310, 3, 0, -655309, 3, 0, -655308, 3, 0, -655307, 3, 0, -655306, 3, 0, -655305, 3, 0, -655304, 3, 0, -655303, 3, 0, -655302, 3, 0, -655301, 3, 0, -655300, 3, 0, -655299, 3, 0, -655298, 3, 0, -655297, 3, 0, -655296, 3, 0, -655293, 3, 0, -589757, 3, 0, -524221, 3, 0, -458685, 3, 0, -458681, 7, 0, -458680, 7, 0, -458679, 7, 0, -458678, 7, 0, -458677, 7, 0, -458676, 7, 0, -458675, 7, 0, -458662, 7, 0, -393168, 5, 0, -393149, 3, 0, -393145, 7, 0, -393126, 7, 0, -327632, 5, 0, -327613, 3, 0, -327609, 7, 0, -327595, 3, 0, -327594, 3, 0, -327593, 3, 0, -327592, 3, 0, -327590, 7, 0, -262122, 0, 0, -262121, 1, 0, -262120, 1, 0, -262119, 2, 0, -262096, 5, 0, -262077, 3, 0, -262073, 3, 0, -262054, 3, 0, -196586, 6, 0, -196585, 7, 0, -196584, 7, 0, -196583, 8, 0, -196560, 5, 0, -196552, 0, 0, -196551, 1, 0, -196550, 1, 0, -196549, 1, 0, -196548, 1, 0, -196547, 1, 0, -196546, 1, 0, -196545, 1, 0, -196544, 1, 0, -196541, 3, 0, -196537, 3, 0, -196528, 0, 0, -196527, 2, 0, -196518, 3, 0, -131024, 5, 0, -131016, 3, 0, -131008, 1, 0, -131005, 3, 0, -131001, 3, 0, -130992, 6, 0, -130991, 8, 0, -130982, 3, 0, -65488, 5, 0, -65484, 0, 0, -65483, 1, 0, -65482, 1, 0, -65481, 1, 0, -65480, 9, 0, -65472, 1, 0, -65469, 3, 0, -65465, 3, 0, -65446, 3, 0, 48, 5, 0, 52, 6, 0, 53, 7, 0, 54, 7, 0, 55, 7, 0, 56, 7, 0, 57, 7, 0, 58, 7, 0, 59, 7, 0, 60, 7, 0, 61, 1, 0, 62, 1, 0, 63, 1, 0, 64, 1, 0, 67, 3, 0, 68, 7, 0, 69, 7, 0, 70, 7, 0, 71, 3, 0, 75, 0, 0, 76, 2, 0, 85, 0, 0, 86, 2, 0, 90, 3, 0, 65584, 5, 0, 65611, 6, 0, 65612, 8, 0, 65621, 6, 0, 65622, 8, 0, 65626, 3, 0, 131094, 0, 0, 131095, 1, 0, 131096, 1, 0, 131097, 2, 0, 131120, 5, 0, 131162, 3, 0, 196630, 6, 0, 196631, 7, 0, 196632, 7, 0, 196633, 8, 0, 196656, 5, 0, 196698, 3, 0, 262192, 10, 0, 262193, 1, 0, 262194, 1, 0, 262195, 1, 0, 262196, 1, 0, 262197, 1, 0, 262198, 1, 0, 262199, 1, 0, 262200, 1, 0, 262201, 1, 0, 262202, 1, 0, 262203, 1, 0, 262204, 1, 0, 262205, 1, 0, 262206, 1, 0, 262207, 1, 0, 262208, 1, 0, 262209, 1, 0, 262210, 1, 0, 262211, 1, 0, 262212, 1, 0, 262213, 1, 0, 262214, 1, 0, 262215, 1, 0, 262216, 1, 0, 262217, 1, 0, 262218, 1, 0, 262219, 1, 0, 262220, 1, 0, 262221, 1, 0, 262222, 1, 0, 262223, 1, 0, 262224, 1, 0, 262225, 1, 0, 262226, 1, 0, 262227, 1, 0, 262228, 1, 0, 262229, 1, 0, 262230, 1, 0, 262231, 1, 0, 262232, 1, 0, 262233, 1, 0, 262234, 9, 0, 524288, 0, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 2, 0, 589835, 5, 0, 655371, 5, 0, 720907, 5, 0, 786443, 5, 0, 851979, 5, 0, 917515, 5, 0, 983051, 5, 0, 1048587, 5, 0, 1114123, 5, 0, 1179659, 5, 0, 1245195, 5, 0, 1310731, 5, 0, 1376267, 5, 0, 1441803, 5, 0, 1507339, 5, 0 )
_sections_unfolded = [ "Transform" ]

[node name="bounceblock2" parent="world1" index="0" instance=ExtResource( 4 )]

position = Vector2( 1321.93, -544.753 )

[node name="DangerBlock10" parent="world1" index="1" instance=ExtResource( 5 )]

position = Vector2( 1812.28, 130.796 )
scale = Vector2( 2.14965, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock11" parent="world1" index="2" instance=ExtResource( 5 )]

position = Vector2( 2078.7, 134.479 )
scale = Vector2( 2.14965, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock12" parent="world1" index="3" instance=ExtResource( 5 )]

position = Vector2( 2350.03, 135.707 )
scale = Vector2( 2.14965, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="world2" type="TileMap" parent="." index="3"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 2
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1441733, 3, 0, -1441729, 0, 0, -1441728, 2, 0, -1441725, 0, 0, -1441724, 1, 0, -1441723, 1, 0, -1441722, 1, 0, -1441721, 1, 0, -1441720, 1, 0, -1376197, 3, 0, -1376193, 3, 0, -1376192, 5, 0, -1376189, 3, 0, -1310661, 3, 0, -1310657, 3, 0, -1310656, 5, 0, -1310653, 3, 0, -1245125, 3, 0, -1245121, 3, 0, -1245120, 5, 0, -1245117, 3, 0, -1245100, 5, 0, -1245094, 3, 0, -1179589, 3, 0, -1179585, 3, 0, -1179584, 5, 0, -1179581, 3, 0, -1179564, 5, 0, -1179558, 3, 0, -1114053, 3, 0, -1114049, 3, 0, -1114048, 5, 0, -1114045, 3, 0, -1114028, 5, 0, -1114022, 3, 0, -1048517, 3, 0, -1048513, 3, 0, -1048512, 5, 0, -1048509, 3, 0, -1048492, 5, 0, -1048486, 3, 0, -982981, 3, 0, -982977, 3, 0, -982976, 5, 0, -982973, 3, 0, -982956, 5, 0, -982950, 3, 0, -917473, 0, 0, -917472, 1, 0, -917471, 1, 0, -917468, 2, 0, -917445, 3, 0, -917441, 3, 0, -917440, 5, 0, -917437, 3, 0, -917420, 5, 0, -917414, 3, 0, -851937, 3, 0, -851932, 5, 0, -851909, 3, 0, -851905, 3, 0, -851904, 5, 0, -851901, 3, 0, -851884, 5, 0, -851878, 3, 0, -786401, 3, 0, -786396, 5, 0, -786382, 3, 0, -786373, 3, 0, -786369, 3, 0, -786368, 5, 0, -786365, 3, 0, -786348, 5, 0, -786342, 3, 0, -720865, 3, 0, -720860, 5, 0, -720846, 3, 0, -720837, 3, 0, -720833, 3, 0, -720832, 5, 0, -720829, 3, 0, -720812, 5, 0, -720806, 3, 0, -655329, 3, 0, -655324, 10, 0, -655323, 1, 0, -655322, 1, 0, -655321, 1, 0, -655320, 1, 0, -655319, 1, 0, -655318, 1, 0, -655317, 1, 0, -655316, 1, 0, -655315, 1, 0, -655314, 1, 0, -655313, 1, 0, -655312, 1, 0, -655311, 1, 0, -655310, 1, 0, -655309, 1, 0, -655308, 1, 0, -655307, 1, 0, -655306, 1, 0, -655305, 1, 0, -655304, 1, 0, -655303, 1, 0, -655302, 1, 0, -655301, 1, 0, -655300, 1, 0, -655299, 1, 0, -655298, 1, 0, -655297, 9, 0, -655296, 5, 0, -655293, 3, 0, -655276, 5, 0, -655270, 3, 0, -589793, 3, 0, -589760, 5, 0, -589757, 3, 0, -589740, 5, 0, -589734, 3, 0, -524257, 3, 0, -524224, 5, 0, -524221, 3, 0, -524204, 5, 0, -524198, 3, 0, -458721, 3, 0, -458688, 5, 0, -458685, 3, 0, -458662, 3, 0, -393185, 3, 0, -393152, 5, 0, -393149, 3, 0, -393126, 3, 0, -327649, 3, 0, -327616, 5, 0, -327613, 3, 0, -327590, 3, 0, -262113, 3, 0, -262080, 5, 0, -262077, 3, 0, -262054, 3, 0, -196577, 3, 0, -196544, 5, 0, -196541, 3, 0, -131041, 3, 0, -131008, 5, 0, -131005, 3, 0, -65521, 0, 0, -65520, 1, 0, -65519, 1, 0, -65518, 2, 0, -65505, 3, 0, -65472, 5, 0, -65469, 3, 0, 15, 6, 0, 16, 7, 0, 17, 7, 0, 18, 8, 0, 31, 3, 0, 64, 5, 0, 67, 3, 0, 65567, 3, 0, 131103, 3, 0, 196639, 3, 0, 262175, 3, 0, 327695, 0, 0, 327696, 1, 0, 327697, 1, 0, 327698, 2, 0, 327711, 3, 0, 393231, 6, 0, 393232, 7, 0, 393233, 7, 0, 393234, 8, 0, 393247, 3, 0, 458783, 3, 0 )
script = ExtResource( 7 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="bounceblock4" parent="world2" index="0" instance=ExtResource( 4 )]

position = Vector2( 1118.49, -426.925 )
collision_layer = 2
collision_mask = 2

[node name="bounceblock3" parent="world2" index="1" instance=ExtResource( 4 )]

position = Vector2( 1612.04, -422.014 )
collision_layer = 2
collision_mask = 2

[node name="bounceblock5" parent="world2" index="2" instance=ExtResource( 4 )]

position = Vector2( 1904.94, -731.65 )
collision_layer = 2
collision_mask = 2

[node name="both_worlds" type="Node2D" parent="." index="4"]

position = Vector2( 1904.94, -731.65 )

[node name="DangerBlock" parent="both_worlds" index="0" instance=ExtResource( 5 )]

position = Vector2( -660.016, 391.029 )
scale = Vector2( 2.14965, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock9" parent="both_worlds" index="1" instance=ExtResource( 5 )]

position = Vector2( 208.134, 745.811 )
scale = Vector2( 2.14965, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock2" parent="both_worlds" index="2" instance=ExtResource( 5 )]

position = Vector2( -429.282, 391.57 )
scale = Vector2( 4.02402, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock3" parent="both_worlds" index="3" instance=ExtResource( 5 )]

position = Vector2( -143.971, 392.65 )
scale = Vector2( 4.02402, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock4" parent="both_worlds" index="4" instance=ExtResource( 5 )]

position = Vector2( 58.6266, 390.6 )
scale = Vector2( 1.38407, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock5" parent="both_worlds" index="5" instance=ExtResource( 5 )]

position = Vector2( 333.4, 27.6528 )
scale = Vector2( 2.72975, 0.5773 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock6" parent="both_worlds" index="6" instance=ExtResource( 5 )]

position = Vector2( 139.189, 34.0022 )
scale = Vector2( 1.09572, 0.651096 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock7" parent="both_worlds" index="7" instance=ExtResource( 5 )]

position = Vector2( 144.1, 230.837 )
scale = Vector2( 1.09572, 5.91974 )
collision_layer = 3
collision_mask = 3

[node name="DangerBlock8" parent="both_worlds" index="8" instance=ExtResource( 5 )]

position = Vector2( 270.557, 211.342 )
scale = Vector2( 1.09572, 5.34888 )
collision_layer = 3
collision_mask = 3

[node name="Tween" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="switch_warning" type="CanvasLayer" parent="." index="6"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Label" type="Label" parent="switch_warning" index="0"]

modulate = Color( 1, 0, 0, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 9.0
margin_top = 9.0
margin_right = 157.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
text = "Warning: cannot switch"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Visibility", "custom_fonts", "custom_styles" ]


